fix grid column gap

--- a/styles/products.css
+++ b/styles/products.css
@@ -160,6 +160,6 @@ aside{
     #products > ul{
         display: grid;
         grid-template-columns: auto auto;
-        grid-gap: 30px 8px;
+        grid-gap: 30px 4px;
     }
 }
